too much string fix & message box css fix

--- a/src/frontend/pages/index.css
+++ b/src/frontend/pages/index.css
@@ -232,6 +232,7 @@ body {
   font-size: 1rem;
   resize: none;
   word-wrap: break-word;
+  max-width: 30rem;
 }
 .message-recipient-low {
   display: grid;
